--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3f51b5</color>
+    <color name="colorPrimary">#5266d7</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#40d6ff</color>
     <color name="apply">#64b5f6</color>
