--- a/app/src/main/res/layout-xlarge/content_main.xml
+++ b/app/src/main/res/layout-xlarge/content_main.xml
@@ -5,25 +5,56 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:weightSum="100"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.patryk.astrocalculator.activity.MainActivity"
     tools:showIn="@layout/activity_main">
 
 
-    <fragment
-        android:id="@+id/fragment"
-        android:name="com.patryk.astrocalculator.fragment.FragmentSun"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="45"
-        tools:layout="@layout/fragment_sun" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
-    <fragment
-        android:id="@+id/fragment2"
-        android:name="com.patryk.astrocalculator.fragment.FragmentMoon"
+        <fragment
+            android:id="@+id/fragment3"
+            android:name="com.patryk.astrocalculator.fragment.FragmentWeather"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            tools:layout="@layout/fragment_weather" />
+
+        <fragment
+            android:id="@+id/fragment4"
+            android:name="com.patryk.astrocalculator.fragment.FragmentForecast"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            tools:layout="@layout/fragment_forecast" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="65"
-        tools:layout="@layout/fragment_moon" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <fragment
+            android:id="@+id/fragment2"
+            android:name="com.patryk.astrocalculator.fragment.FragmentMoon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            tools:layout="@layout/fragment_moon" />
+
+        <fragment
+            android:id="@+id/fragment"
+            android:name="com.patryk.astrocalculator.fragment.FragmentSun"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            tools:layout="@layout/fragment_sun" />
+
+    </LinearLayout>
+
 </LinearLayout>
