fixes for tablet

--- a/app/src/main/res/layout-xlarge-land/content_main.xml
+++ b/app/src/main/res/layout-xlarge-land/content_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
         xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:weightSum="1"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="com.patryk.astrocalculator.activity.MainActivity"
@@ -15,8 +15,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:weightSum="4">
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
         <fragment
             android:id="@+id/fragment3"
@@ -51,4 +51,4 @@
             tools:layout="@layout/fragment_moon" />
     </LinearLayout>
 
-</HorizontalScrollView>
+</LinearLayout>
